...
        }}
      >
        <Stack.Screen name="index" options={hiddenHeader} />
        <Stack.Screen name="webview" options={hiddenHeader} />
        <Stack.Screen
          name="settings/device"
          options={{ title: "This device", ...listScreen }}
        />
        <Stack.Screen
          name="settings/appearance"
          options={{ title: "Appearance" }}
        />
        <Stack.Screen
...
